Remove deprecated URL constructor usage where possible (#51)
URI # toURL where possible